--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2E7SCX9Q2G"></script>
 <script>
   if (window.location.port === 3000)
-    window['ga-disable-UA-XXXXX-Y'] = true;
+    window['ga-disable-G-2E7SCX9Q2G'] = true;
   
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
